syntax = "proto3";

package inventory.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/Kosench/go-microservices-ecommerce/shared/pkg/proto/inventory/v1;inventory_v1";

// Категория детали (тип компонента корабля)
enum Category {
  // Неизвестная категория (значение по умолчанию)
  CATEGORY_UNSPECIFIED  = 0;
  // Двигатель
  CATEGORY_ENGINE = 1;
  // Топливо
  CATEGORY_FUEL = 2;
  // Иллюминатор
  CATEGORY_PORTHOLE = 3;
  // Крыло
  CATEGORY_WING = 4;
}

// Габариты детали
message Dimensions {
  // Длина в метрах
  double length = 1;
  // Ширина в метрах
  double width = 2;
  // Высота в метрах
  double height = 3;
  // Вес в килограммах
  double weight = 4;
}

// Информация о производителе
message Manufacturer {
  // Название компании
  string name = 1;
  // Страна производителя (ISO-код или человекочитаемое название)
  string country = 2;
  // Веб‑сайт производителя
  string website = 3;
}

// Описание детали на складе
message Part {
  // Уникальный идентификатор детали (UUID)
  string uuid = 1;
  // Человекочитаемое название
  string name = 2;
  // Текстовое описание
  string description = 3;
  // Цена в минимальных единицах валюты (например, в копейках)
  int64 price_cents = 4;
  // Количество на складе
  int64 stock_quantity = 5;
  // Категория детали
  Category category = 6;
  // Габариты детали
  Dimensions dimensions = 7;
  // Производитель детали
  Manufacturer manufacturer = 8;
  // Теги для быстрого поиска
  repeated string tags = 9;
  // Произвольные метаданные (гибкое расширяемое хранилище)
  map<string, google.protobuf.Value> metadata = 10;
  // Время создания записи
  google.protobuf.Timestamp created_at = 11;
  // Время последнего обновления записи
  google.protobuf.Timestamp updated_at = 12;
}

// Фильтр для поиска деталей
// Пустое поле → по этому признаку не фильтруем
// ИЛИ внутри одного поля, И между разными полями
message PartsFilter {
  // Список UUID'ов. Пусто — не фильтруем по UUID
  repeated string uuids = 1;
  // Список имён. Пусто — не фильтруем по имени
  repeated string names = 2;
  // Список категорий. Пусто — не фильтруем по категории
  repeated Category categories = 3;
  // Список стран производителей. Пусто — не фильтруем по стране
  repeated string manufacturer_countries = 4;
  // Список тегов. Пусто — не фильтруем по тегам
  repeated string tags = 5;
}

// GetPartRequest - получение детали по UUID
message GetPartRequest {
  string uuid = 1;
}

// GetPartResponse - ответ с информацией о детали
message GetPartResponse {
  Part part = 1;
}

// ListPartsRequest - запрос на получение списка деталей
message ListPartsRequest {
  PartsFilter filter = 1;
}

// ListPartsResponse - ответ со списком деталей
message ListPartsResponse {
  repeated Part parts = 1;
}

// gRPC‑сервис управления деталями
service InventoryService {
  // Возвращает информацию о детали по её UUID
  rpc GetPart(GetPartRequest) returns (GetPartResponse);

  // Возвращает список деталей с возможностью фильтрации и пагинации
  rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}
